llvm-toolchain-3.8 (1:3.8.1-13) UNRELEASED; urgency=medium

  * Fix a version issue with run-clang-tidy-4.0.py
  * Updated patch kfreebsd-support.diff

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 12 Sep 2016 13:57:25 +0200

llvm-toolchain-3.8 (1:3.8.1-12) unstable; urgency=medium

  * Fix a ftbfs on lldb on arm64 (Closes: #836591) (Closes: #836335)
    Once more, thanks to Ximin Luo for investigating

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 08 Sep 2016 10:39:51 +0200

llvm-toolchain-3.8 (1:3.8.1-11) unstable; urgency=medium

  * Fix the arm64 lldb build issue. Thanks to Ximin Luo (Closes: #836591)
  * Fix asan with libc6 >= 2.24 (asan-glibc-2.24.diff, backport of 269633)
    Many thanks to Michael Stapelberg for the great bug report.
    (Closes: 836723)

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 05 Sep 2016 08:57:48 +0200

llvm-toolchain-3.8 (1:3.8.1-10) unstable; urgency=medium

  * Fix the usage of jsoncpp in polly. Thanks to James Clarke for the patch
    (Closes: #835606)
  * Port to kfreebsd. Many thanks to Pino Toscano
    (Closes: #835665)
  * Build lldb on arm64. Hopefully, works.
    Should fix the rust migration

 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 27 Aug 2016 17:36:06 +0200

llvm-toolchain-3.8 (1:3.8.1-9) unstable; urgency=medium

  * Generate manpages for lli, lldb-mi & git-clang-format
  * Fix some lintian overrides
  * Bring back the lto (gone with the cmake migration)
    (Closes: #819333) (upstream: #27223)
  * Add symlink from ./build to ../share and ../lib etc
    Thanks to Ximin Luo for the patch (Closes: #834144)
  * Disable lldb on mips64el (same as in 3.9)

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 08 Aug 2016 18:50:13 +0200

llvm-toolchain-3.8 (1:3.8.1-8) unstable; urgency=medium

  * Disable the usage of ld gold on powerpc (Closes: #833583)
  * Revert drop-avx512-from-skylake.diff, it is causing some regressions in the
    testsuite
  * Disable lldb on ppc64