@@ -2,6 +2,9 @@ llvm-toolchain-3.8 (1:3.8.1-13) UNRELEASED; urgency=medium
 
   * Fix a version issue with run-clang-tidy-4.0.py
   * Updated patch kfreebsd-support.diff
+  * The libstdc++-6-dev & libobjc-6-dev are only install with clang-X.Y
+    and libclang-X.Y-dev and no longer with libclang1-X.Y
+    (Closes: #841309)
 
  -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 12 Sep 2016 13:57:25 +0200
 
